fixing style (not responsive)

--- a/src/components/NextDaysForecast.css
+++ b/src/components/NextDaysForecast.css
@@ -1,27 +1,35 @@
 .bottom_container {
   width: auto;
   display: flex;
-  flex-direction: row;
+  /* flex-direction: row; */
 
   justify-content: space-evenly;
   align-items: center;
 }
 
 .forecast_card {
-  max-width: 150px;
-  padding: 2px;
+  width: 150px;
+  max-height: 140px;
+  padding: 1px;
+  margin: 1.5rem auto;
+  border-radius: 5px solid grey;
   /* margin: 0 2px; */
 }
 
 .forecast_date {
   font-size: 1.2rem;
-  padding: 1px;
+  font-weight: bold;
+  padding: 0.5px;
+  margin: 1rem auto;
+  margin: 0.5rem auto;
 }
 
 .forecast_temp {
   font-size: 1.2rem;
+  margin: 0.5rem auto;
 }
 
 .forecast_description {
   font-size: 1.2rem;
+  margin: 0.5rem auto;
 }
