--- a/src/components/WeatherForecast.css
+++ b/src/components/WeatherForecast.css
@@ -13,22 +13,22 @@
   color: crimson;
 }
 .weather_container {
-  height: 100vh;
+  height: 50vh;
   max-width: 700px;
-  height: 700px;
+  max-height: 700px;
   margin: auto;
   padding: 0 1rem;
   position: relative;
-  top: 5%;
+  /* top: 1%; */
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  /* justify-content: center;
+  align-items: center; */
 }
 
 .top_info {
   width: 100%;
-  margin: 1rem auto;
+  /* margin: 1rem auto; */
 }
 
 .location {
@@ -76,7 +76,7 @@
   justify-content: space-evenly;
   text-align: center;
   width: 90%;
-  margin: 1rem auto;
+  /* margin: 1rem auto; */
   padding: 1rem;
   border-radius: 12px;
   /* background-color: paleturquoise; */
